create product form created.

--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 footer {
-  background-color: $grey;
+  background-color: $gray;
 
   small {
     font-family: 'gothamxlightitalic', 'gothamlightitalic', Arial;
