--- a/app/assets/stylesheets/components/button.scss
+++ b/app/assets/stylesheets/components/button.scss
@@ -30,7 +30,7 @@
     border-top: 2px solid $green;
     display: inline-block;
     padding: 10px;
-    background-color: $light-grey;
+    background-color: $light-gray;
     font-weight: bold;
 
     &--active {
@@ -38,4 +38,19 @@
       color: white;
     }
   }
+}
+
+.add-association-button {
+  padding: 5px 10px;
+  background-color: $blue;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.remove-association-button {
+  padding: 5px 10px;
+  background-color: $red;
+  border-radius: 5px;
+  color: white;
+  font-weight: bold;
 }
