--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -7,7 +7,7 @@
       = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
       .slide.slide--active.animated.fadeIn#1
-        = f.input :user, input_html: { value: current_user }, as: :hidden
+        = f.input :user_id, input_html: { value: current_user.id }, as: :hidden
         = f.input :name, label: "Nome do produto"
 
         %button.button.button--full-width.button--pink.change-slide{type: "button", goTo: "2"} Próximo
@@ -21,7 +21,7 @@
         %button.button.button--full-width.button--yellow.change-slide{type: "button", goTo: "1"} Voltar
 
       .slide.animated.fadeIn#3
-        = f.input :price, label: "Preço do produto", input_html: { 'data-mask': 'R$ 000,00' }
+        = f.input :price, label: "Preço do produto", input_html: { id: "money" }
 
         %button.button.button--full-width.button--pink.change-slide{type: "button", goTo: "4"} Próximo
         %br
@@ -42,10 +42,26 @@
         %button.button.button--full-width.button--yellow.change-slide{type: "button", goTo: "3"} Voltar
 
       .slide.animated.fadeIn#5
+        = f.input :categories, label: "Categories do produto", as: :select, collection: ProductCategory.all, label_method: lambda { |category| "#{category.name}" }, input_html: { multiple: true, style: "min-height: 250px" }
+
+        %button.button.button--full-width.button--pink.change-slide{type: "button", goTo: "6"} Próximo
+        %br
+        %br
+        %button.button.button--full-width.button--yellow.change-slide{type: "button", goTo: "4"} Voltar
+
+      .slide.animated.fadeIn#6
+        = f.input :categories, label: "Tamanhos disponíveis do produto", as: :select, collection: ProductSize.all, label_method: ProductSize.name, label_method: lambda { |size| "#{size.size}" }, input_html: { multiple: true, style: "min-height: 250px" }
+
+        %button.button.button--full-width.button--pink.change-slide{type: "button", goTo: "7"} Próximo
+        %br
+        %br
+        %button.button.button--full-width.button--yellow.change-slide{type: "button", goTo: "5"} Voltar
+
+      .slide.animated.fadeIn#7
         = f.input :hidden, as: :hidden
         = f.input :quantity, label: "Quantidade disponível em estoque:"
 
         %button.button.button--full-width.button--green.change-slide{type: "submit"} Concluir
         %br
         %br
-        %button.button.button--full-width.button--yellow.change-slide{type: "button", goTo: "4"} Voltar
+        %button.button.button--full-width.button--yellow.change-slide{type: "button", goTo: "6"} Voltar
