--- a/app/views/products/edit.html.haml
+++ b/app/views/products/edit.html.haml
@@ -1,7 +1,5 @@
-%h1 Editing product
+.section.animated.fadeIn
+  .section__content.text-center
+    %h1.title Editar produto
 
-= render 'form'
-
-= link_to 'Show', @product
-\|
-= link_to 'Back', products_path
+    = render 'form'
