--- a/app/assets/stylesheets/components/card.scss
+++ b/app/assets/stylesheets/components/card.scss
@@ -14,3 +14,35 @@
 
   @include colors("background-color");
 }
+
+.product_card {
+  position: relative;
+  text-align: left;
+
+  &__picture {
+    display: inline;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+  }
+
+  &__content {
+    display: inline-block;
+    text-align: left;
+    margin-left: 10px;
+  }
+
+  &__actions {
+    text-align: right;
+    position: absolute;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: space-around;
+    font-size: 15px;
+    padding-top: 10px;
+
+    img { width: 15px; height: 15px }
+  }
+}
