--- a/app/views/products/_product_picture_fields.html.haml
+++ b/app/views/products/_product_picture_fields.html.haml
@@ -1,5 +1,5 @@
 .nested-fields
-  = f.input :picture
+  = f.input :picture, label: "Foto"
   = link_to_remove_association " - ", f, class: "remove-association-button"
   %br
-  %br  	  	
+  %br
