--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -1,24 +1,48 @@
-%p#notice= notice
+.section.text-center
+  .section__content
+    %h1.title Visualizando produto
 
-%p
-  %b User:
-  = @product.user
-%p
-  %b Name:
-  = @product.name
-%p
-  %b Description:
-  = @product.description
-%p
-  %b Price:
-  = @product.price
-%p
-  %b Hidden:
-  = @product.hidden
-%p
-  %b Quantity:
-  = @product.quantity
+    %div{style: "text-align: left"}
+      %p
+        %b Fotos:
+        .image_carousel
+          - @product.product_pictures.each do |pic|
+            %img{src: "#{pic.picture.url}" }
 
-= link_to 'Edit', edit_product_path(@product)
-\|
-= link_to 'Back', products_path
+      %p
+        %b Nome:
+        = @product.name
+      %p
+        %b Descrição:
+        = @product.description
+      %p
+        %b Preço:
+        = @product.price
+      %p
+        %b Disponível para vendas (visível)?:
+        = translate_boolean(@product.hidden)
+      %p
+        %b Quantidade em estoque:
+        = @product.quantity
+      %p
+        %b Tamanhos:
+        - @product.sizes.each do |id|
+          = ProductSize.find(id).size if id.present?
+      %p
+        %b Categorias (palavras chave):
+        - @product.categories.each do |id|
+          = ProductCategory.find(id).name + " |" if id.present?
+
+- content_for :head do
+  %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css", :rel => "stylesheet", :type => "text/css"}/
+  %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css", :rel => "stylesheet", :type => "text/css"}/
+
+- content_for :javascript do
+  %script{src: "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js", type: "text/javascript"}
+  
+  :javascript
+    $(document).ready(function(){
+      $('.image_carousel').slick({
+        infinite: false
+      });
+    });
