products store page. Product adds 70% of the value after save

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -17,6 +17,7 @@
 @import "components/flash";
 @import "components/slide";
 @import "components/network-card";
+@import "components/product";
 
 body {
   margin: 0;
