--- a/app/assets/stylesheets/components/category.scss
+++ b/app/assets/stylesheets/components/category.scss
@@ -13,9 +13,27 @@
 }
 
 .category {
-  display: inline-block;
-  text-align: center;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   width: 80px;
 
-  img { border-radius: 50%; padding: 2px; background: linear-gradient(45deg, $green, $blue) }
+  .img {
+    background: linear-gradient(45deg, $green, $blue);
+    padding: 1px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 52px;
+    width: 52px;
+    border-radius: 50%;
+  }
+
+  img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    background-color: white;
+  }
 }
