--- a/app/assets/stylesheets/components/product.scss
+++ b/app/assets/stylesheets/components/product.scss
@@ -5,26 +5,56 @@
   overflow: hidden;
 
   &__head {
-    padding: 5px 10px;
+    padding: 10px;
     display: flex;
     align-items: center;
+    position: relative;
 
     img {
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
+      width: 40px;
+      height: 40px;
+    }
+
+    h3 {
+      margin: 0;
+      margin-left: 15px;
+    }
+
+    .more {
+      position: absolute;
+      right: 0;
+      height: 30px;
+      margin: 0 auto;
+      z-index: 999;
     }
   }
 
   &__footer {
     padding: 10px;
   }
-}
 
+  &__more {
+    display: none;
+    font-weight: bold;
+    padding: 15px;
+    background-color: white;
+    border: 1px solid black;
+    position: absolute;
+    right: 0;
+    z-index: 999;
+    margin-top: 80px;
+  }
+}
 
 .size-button {
   padding: 5px 20px;
   background-color: white;
   color: black;
   border: 1px solid black;
+}
+
+.selected-size {
+  background-color: $green;
+  color: white;
 }
