--- a/app/views/products/store.html.haml
+++ b/app/views/products/store.html.haml
@@ -1,32 +1,17 @@
 .categories
   .categories__content
+    = form_for_filterrific @filterrific, remote: true, html: {style: 'display: none'} do |f|
+      = f.text_field(:with_category_id)
     - ProductCategory.all.each do |category|
-      .category
-        %img{src: "http://via.placeholder.com/50x50"}
-        %br
+      .category{onclick: "$('#filterrific_with_category_id')[0].value = #{category.id}; $('#filterrific_filter').submit()"}
+        .img
+          - if not category.icon.present?
+            %img{src: "http://via.placeholder.com/50x50"}
+          - else
+            = image_tag(category.icon.url)
         = category.name
 
-- Product.all.each do |product|
-  .product
-    .product__head
-      = image_tag(User.find(product.user_id).avatar.url)
-      %h3{style: "margin-left: 15px"}= Product.name
-    .product__pics
-      - product.product_pictures.each do |pic|
-        %img{src: "#{pic.picture.url}", style: "height: 360px"}
-    .product__footer
-      - product.sizes.each do |id|
-        - if id.length > 0
-          %button.size-button= ProductSize.find(id).size
-      %br
-      %br
-      = product.price
-      %br
-      =product.description
-      %br
-      %br
-      %button.button.button--full-width.button--green Adicionar ao carrinho
-
+= render(partial: 'products/list', locals: { products: @products })
 
 - content_for :head do
   %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css", :rel => "stylesheet", :type => "text/css"}/
@@ -40,4 +25,16 @@
       $('.product__pics').slick({
         infinite: false
       });
+    });
+
+    $('.size-button').click(function() {
+      var button = $(this).attr('data-toggle');
+      var product = $(this).attr('product-id');
+      $('#' + button).prop('checked', true);
+      $(".sb" + product).removeClass("selected-size");
+      $(this).addClass("selected-size");
+    });
+
+    $('.more').click(function() {
+      $(this).closest('.product__head').find('.product__more').toggle();
     });
