shopping cart functionality created

--- a/app/assets/stylesheets/components/button.scss
+++ b/app/assets/stylesheets/components/button.scss
@@ -15,6 +15,10 @@
     @include breakpoint("small-up") { float: right }
   }
 
+  &:disabled {
+    background-color: $light-gray !important;
+  }
+
   @include colors("background-color");
 }
 
