--- a/app/views/products/_list.html.haml
+++ b/app/views/products/_list.html.haml
@@ -19,7 +19,7 @@
         - product.sizes.each do |id|
           - if id.length > 0
             %input{type: "radio", name: "#{product.id}_size", id: "#{product.id}#{ProductSize.find(id).size}", style: "display: none"}
-            %button{class: "size-button sb#{product.id}",type: "radio", "data-toggle" => "#{product.id}#{ProductSize.find(id).size}", "product-id" => "#{product.id}"}= ProductSize.find(id).size
+            %button{class: "size-button sb#{product.id}", type: "radio", "data-toggle" => "#{ProductSize.find(id).size}", "product-id" => "#{product.id}"}= ProductSize.find(id).size
         %br
         %br
         = product.price
@@ -27,6 +27,18 @@
         =product.description
         %br
         %br
-        %button.button.button--full-width.button--green Adicionar ao carrinho
+        = link_to add_item_path(product_id: product.id, size: product.sizes.first.size), remote: true do
+          %button.button.button--full-width.button--green{id: "add_#{product.id}", disabled: "disabled"} Adicionar ao carrinho
 
   = will_paginate products
+
+= content_for :javascript do
+  :javascript
+    $('.size-button').click(function() {
+      var size = $(this).attr("data-toggle");
+      var id = $(this).attr("product-id");
+      var button = $("#add_" + id);
+
+      button.closest('a').attr("href", "/store/add_item/" + id + "&" + size);
+      button.removeAttr("disabled");
+    })
