--- a/app/views/users/_deepness.html.haml
+++ b/app/views/users/_deepness.html.haml
@@ -2,7 +2,9 @@
   - resource.invited_ids.each do |id|
     .network-card.network-card--line.element{class: "#{number}"}
       -# = id
-      = image_tag(User.find(id).avatar.thumb.url)
+      = image_tag(User.find(id).avatar.thumb.url) if User.find(id).avatar.present?
+      - if not User.find(id).avatar.present?
+        %img{src: "http://via.placeholder.com/50x50"}
       .network-card__content
         %text= User.find(id).name.split.first if User.find(id).name.present?
         = id
