purchases sscaffold created. Shopping cart with total value

--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -16,7 +16,7 @@
 
         .product_card__content
           %h3{style: "margin-bottom: 0"}= product.name
-          = product.price
+          = show_price(product.price)
           %br
           = "Estoque: " + product.quantity + " Unidades"
 
