--- a/app/views/products/_list.html.haml
+++ b/app/views/products/_list.html.haml
@@ -22,7 +22,7 @@
             %button{class: "size-button sb#{product.id}", type: "radio", "data-toggle" => "#{ProductSize.find(id).size}", "product-id" => "#{product.id}"}= ProductSize.find(id).size
         %br
         %br
-        = product.price
+        = show_price(product.price)
         %br
         =product.description
         %br
