--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -17,7 +17,7 @@
         = @product.description
       %p
         %b Preço:
-        = @product.price
+        = show_price(@product.price)
       %p
         %b Disponível para vendas (visível)?:
         = translate_boolean(@product.hidden)
@@ -39,7 +39,7 @@
 
 - content_for :javascript do
   %script{src: "https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js", type: "text/javascript"}
-  
+
   :javascript
     $(document).ready(function(){
       $('.image_carousel').slick({
