--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -10,7 +10,11 @@
     = f.input :phone, input_html: { 'data-mask': '(00) 00000-0000' }, label: "Telefone"
     = f.input :social_security_number, input_html: { 'data-mask': '000.000.000-00' }, label: "CPF" if @user.social_security_number.present?
     = f.input :tax_number, input_html: { 'data-mask': '00.000.000/0000-00' }, label: "CNPJ" if @user.tax_number.present?
-    = f.input :avatar, label: "Foto de perfil"
+    = f.input :avatar, label: "Foto de perfil", input_html: { style: "margin-bottom: 0" }
+    %small Máximo 15mb
+
+    %br
+    %br
 
     %button.button.button--full-width.button--blue.change-slide{type: "button", goTo: "2"} Próximo
 
