changed logo in devise screens

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,7 +1,7 @@
 = show_flash_messages
 .section
   .section__content.text-center
-    = image_tag("logo-horizontal.png", style: "width: 100%; height: auto; max-width: 250px; margin: 0 auto;")
+    = image_tag("logo-vertical.png", style: "width: 100%; height: auto; max-width: 260px; margin: 0 auto;")
     %h1.title Criar conta
 
     = simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "fancy-form"}) do |f|
