url minifier link updated to production

--- a/app/views/url_minifiers/redirect_url.html.haml
+++ b/app/views/url_minifiers/redirect_url.html.haml
@@ -2,6 +2,6 @@
   / Sharing meta tags
   %meta{:content => "Multinível Modas", :property => "og:title"}/
   %meta{:content => "Hey, cadastre-se usando meu código!", :property => "og:description"}/
-  %meta{:content => "http://localhost:3000#{@user.avatar.url}", :property => "og:image"}/
-  %meta{:content => "http://localhost:3000", :property => "og:url"}/
+  %meta{:content => "https://multinivelmodas.baptistsoftware.com.br/#{@user.avatar.url}", :property => "og:image"}/
+  %meta{:content => "https://multinivelmodas.baptistsoftware.com.br/", :property => "og:url"}/
   %meta{:content => "Multinível Modas", :property => "og:site_name"}/
