--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -36,7 +36,12 @@ a {
   flex-direction: row;
   margin: 10% 5%;
 
-  img { border-radius: 50%; margin-right: 20px; height: 100px; width: 100px }
+  img {
+    border-radius: 50%;
+    margin-right: 20px;
+    height: auto;
+    width: 100px;
+  }
 
   &__text {
     text-align: left;
