--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,35 +1,37 @@
-%h1 Listing users
+.section
+  .section__content.text-center
+    %h1.title Lista de usuários
 
-%table
-  %thead
-    %tr
-      %th Name
-      %th Role
-      %th Graduation
-      %th Level
-      %th Avatar
-      %th Phone
-      %th Social security number
-      %th Tax number
-      %th
-      %th
-      %th
+    .table
+      %table.table
+        %thead
+          %tr
+            %th
+            %th Nome
+            %th Graduação
+            %th Permissão
+            %th
+            %th
+            %th
 
-  %tbody
-    - @users.each do |user|
-      %tr
-        %td= user.name
-        %td= user.role
-        %td= user.graduation
-        %td= user.level
-        %td= user.avatar
-        %td= user.phone
-        %td= user.social_security_number
-        %td= user.tax_number
-        %td= link_to 'Show', user
-        %td= link_to 'Edit', edit_user_path(user)
-        %td= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }
+        %tbody
+          - @users.each do |user|
+            %tr
+              %td
+                = image_tag(user.avatar.url, style: "width: 50px; height: 50px; border-radius: 50%")
+              %td= user.name
+              %td= user.graduation.capitalize if user.graduation.present?
+              %td= translate_role(user.role)
+              %td
+                = link_to user do
+                  %img.destroy{src: "https://icongr.am/clarity/eye.svg?color=13B3F2", style: "max-width: 20px"}
+              %td
+                = link_to edit_user_path(user) do
+                  %img.destroy{src: "https://icongr.am/clarity/pencil.svg?color=ffc406", style: "max-width: 20px"}
+              %td
+                = link_to user, method: :delete, data: { confirm: 'Tem certeza disso? Isso Não poderá ser desfeito!' } do
+                  %img.destroy{src: "https://icongr.am/clarity/trash.svg?color=F20505", style: "max-width: 20px"}
 
-%br
+    %br
 
-= link_to 'New User', new_user_path
+    -# = link_to 'New User', new_user_path
