--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,17 +1,19 @@
 .section
   .section__content.text-center
-    = image_tag(current_user.avatar.url, style: "border-radius: 50%; width: fit-content; margin: 0 auto; max-width: 100%; max-height: 300px")
+    = image_tag(@user.avatar.url, style: "border-radius: 50%; width: 100%; height: auto")
     %h3{style: "margin-bottom: 0"}= @user.name
     %small= translate_role(@user.role) if not @user.role == "seller"
     %br
 
-    .columns
-      .column.column--2
-        = link_to edit_user_path(current_user) do
-          %button.button.button--blue Editar informações do perfil
-      .column.column--2
-        = link_to edit_user_registration_path do
-          %button.button.button--yellow Editar informações de login
+    -# TODO: Add the possibility to the admin edit other user information
+    - if @user == current_user
+      .columns
+        .column.column--2
+          = link_to edit_user_path(@user) do
+            %button.button.button--blue Editar informações do perfil
+        .column.column--2
+          = link_to edit_user_registration_path do
+            %button.button.button--yellow Editar informações de login
 
     - if not @user.role == "seller"
       .card{style: "color: black"}
