--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -46,6 +46,9 @@
             %li
               %img{src: "https://icongr.am/jam/user-circle.svg"}
               = link_to "Meu perfil", user_path(current_user)
+            %li
+              %img{src: "https://icongr.am/jam/shopping-cart.svg"}
+              = link_to "Comprar", store_path
             - if current_user.role == "seller" or current_user.role == "admin"
               %li
                 %img{src: "https://icongr.am/feather/box.svg"}
@@ -54,9 +57,6 @@
               %li
                 %img{src: "https://icongr.am/feather/box.svg"}
                 = link_to "Meus pedidos", user_path(current_user)
-              %li
-                %img{src: "https://icongr.am/jam/shopping-cart.svg"}
-                = link_to "Comprar", user_path(current_user)
             - if current_user.role == "consultant" or current_user.role == "admin"
               %li
                 %img{src: "https://icongr.am/jam/sitemap.svg"}
