--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -25,7 +25,11 @@
           %img{src: "https://icongr.am/feather/menu.svg", onclick: "sidebar()"}
           %a{:href => "/", style: "margin-top: 10px"}
             = image_tag("logo-horizontal.png", style: "max-width: 100px")
-          %img{src: "https://icongr.am/feather/briefcase.svg", onclick: "$('.modal').toggle()"}
+          - if ("products").include?(params[:controller])
+            %img{src: "https://icongr.am/feather/briefcase.svg", onclick: "$('.modal').toggle()"}
+          - else
+            = link_to shopping_cart_path(current_user.shopping_cart) do
+              %img{src: "https://icongr.am/feather/briefcase.svg", onclick: "$('.modal').toggle()"}
 
       .sidebar#sidebar
         .sidebar__content
