store animations for shopping cart button and add item to cart button

--- a/app/assets/stylesheets/components/button.scss
+++ b/app/assets/stylesheets/components/button.scss
@@ -20,6 +20,10 @@
   }
 
   @include colors("background-color");
+
+  &--animated {
+    animation: button_pulsing 1s infinite;
+  }
 }
 
 .select-buttons {
