--- a/app/assets/stylesheets/components/variables.scss
+++ b/app/assets/stylesheets/components/variables.scss
@@ -128,3 +128,32 @@ $yellow: #ffc406;
       opacity: 0%;
     }
 }
+
+@keyframes pulsing {
+	0% {
+		transform: scale(0.9);
+		box-shadow: 0 0 0 0 rgba(242, 5, 5, 0.4);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 5px rgba(242, 5, 5, 0);
+	}
+
+	100% {
+		transform: scale(0.9);
+	}
+}
+
+@keyframes button_pulsing {
+	0% {
+		box-shadow: 0 0 0 0 rgba(53, 193, 174, 1);
+	}
+
+	70% {
+		box-shadow: 0 0 0 20px rgba(53, 193, 174, 0);
+	}
+
+	100% {
+	}
+}
