removed swipe gesture on #content element

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -93,7 +93,7 @@
           %img.pattern{src: "#{asset_path('group_11.svg')}"}
           = image_tag("logo-horizontal.png", class: "logo")
 
-      .page-content#content
+      .page-content
         = show_flash_messages
         = yield
     - else
