--- a/app/views/users/_linearity.html.haml
+++ b/app/views/users/_linearity.html.haml
@@ -6,26 +6,11 @@
         %img{src: "http://via.placeholder.com/50x50"}
       .network-card__content
         %text= User.find(id).name.split.first if User.find(id).name.present?
-        = id
         %br
         %small= User.find(id).graduation
+        %br        	
+        %small= "Volume: R$ " + User.find(id).sales_volume
       - if User.find(id).invited_ids.length > 0
         %a{onclick: "$('.#{id}').toggle()"} [+]
       = render partial: "deepness", locals: { resource: User.find(id), number: id }
       %br
-
-
--# - if resource.invited_ids.length > 0
--#   - resource.invited_ids.each do |id|
--#     = id
--#     .network-card.element
--#       = image_tag(User.find(id).avatar.thumb.url) if User.find(id).avatar.present?
--#       - if not User.find(id).avatar.present?
--#         %img{src: "http://via.placeholder.com/50x50"}
--#       .network-card__content
--#         = User.find(id).name.split(" ").first
--#         %small= User.find(id).graduation
--#       - if User.find(id).invited_ids.length > 0
--#         %a{onclick: "$('.#{id}').toggle()"} +
--#     = render partial: "deepness", locals: { resource: User.find(id), number: id }
--#     %br
