fixed shopping cart first item bug

--- a/app/views/shopping_carts/_show.html.haml
+++ b/app/views/shopping_carts/_show.html.haml
@@ -1,33 +1,15 @@
 .section
   .section__content.text-center
-    - if @shopping_cart.shopping_cart_items.count > 0
-      %h1.title Carrinho de compras
+    #results
+      - if @shopping_cart.shopping_cart_items.count > 0
+        = render(partial: "shopping_carts/list", locals: { shopping_cart: @shopping_cart })
 
-      .table
-        %table.table
-          %thead
-            %tr
-              %th #
-              %th Nome
-              %th Tam.
-              %th Quant.
-              %th{style: "min-width: 70px"} Preço un.
-              %th
-          %tbody#results
-            = render(partial: "shopping_carts/list", locals: { shopping_cart: @shopping_cart })            
+      - else
+        %h1.title Seu carrinho está vazio, porquê não adiciona algo?
 
-      %br
+        = image_tag("logo-vertical.png", style: "width: 100%; height: auto")
 
-      %button.button.button--green Finalizar compra
-      %br
-      %button.button.button--pink.button--full-width{onclick: "$('.modal').toggle()"} Continuar Comprando
+        %br
 
-    - else
-      %h1.title Seu carrinho está vazio, porquê não adiciona algo?
-
-      = image_tag("logo-vertical.png", style: "width: 100%; height: auto")
-
-      %br
-
-      = link_to :store do
-        %button.button.button--green.button--full-width Ir à loja
+        = link_to :store do
+          %button.button.button--green.button--full-width Ir à loja
