--- a/app/views/products/store.html.haml
+++ b/app/views/products/store.html.haml
@@ -9,7 +9,7 @@
             %img{src: "http://via.placeholder.com/50x50"}
           - else
             = image_tag(category.icon.url)
-        = category.name
+        %text= category.name.capitalize!
 
 = render(partial: 'products/list', locals: { products: @products })
 
