--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -66,7 +66,8 @@
               = link_to "Meu perfil", user_path(current_user)
             %li
               %img{src: "https://icongr.am/jam/shopping-cart.svg"}
-              = link_to "Comprar", store_path
+              -# = link_to "Comprar", store_path
+              = link_to "Comprar", soon_path
             - if current_user.role == "seller" or current_user.role == "admin"
               %li
                 %img{src: "https://icongr.am/feather/box.svg"}
@@ -74,7 +75,8 @@
             - if current_user.role == "consultant" or current_user.role == "client"
               %li
                 %img{src: "https://icongr.am/feather/box.svg"}
-                = link_to "Meus pedidos", user_path(current_user)
+                -# = link_to "Meus pedidos", user_path(current_user)
+                = link_to "Meus pedidos", soon_path
             - if current_user.role == "consultant" or current_user.role == "admin"
               %li
                 %img{src: "https://icongr.am/jam/sitemap.svg"}
