--- a/app/views/purchases/_form.html.haml
+++ b/app/views/purchases/_form.html.haml
@@ -1,13 +1,14 @@
 -# frozen_string_literal: true
-= simple_form_for(@purchase) do |f|
+= simple_form_for(@purchase, html: { class: "fancy-form" }) do |f|
   = f.error_notification
   = f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present?
 
   .form-inputs
-    = f.association :user
-    = f.input :payment_method
-    = f.input :value
-    = f.association :address
+    = f.input :user_id, input_html: { value: current_user.id }, as: :hidden
+    = f.input :payment_method, as: :select, collection: ["boleto", "transferência", "saldo"]
+    = f.input :status, as: :hidden, input_html: { value: "Aguardando pagamento" }
+    = f.input :value, input_html: { value: sum_items(current_user.shopping_cart) }, as: :hidden
+    = f.input :address_id, input_html: { value: current_user.address.id }, as: :hidden
 
   .form-actions
-    = f.button :submit
+    %button.button.button--green.button--full-width{type: "submit"} Finalizar pagamento
