--- a/app/views/purchases/new.html.haml
+++ b/app/views/purchases/new.html.haml
@@ -1,5 +1,5 @@
-%h1 New purchase
-
-= render 'form'
-
-= link_to 'Back', purchases_path
+.section
+  .section__content
+    %h1.title Pagamento
+    
+    = render 'form'
