--- a/app/views/purchases/show.html.haml
+++ b/app/views/purchases/show.html.haml
@@ -78,4 +78,4 @@
               %td= item.product.name
               %td= item.size
               %td= item.quantity
-              %td= show_price(item.product.price)
+              %td= format_price(item.product.price)
