--- a/app/views/products/_list.html.haml
+++ b/app/views/products/_list.html.haml
@@ -25,7 +25,7 @@
             %button{class: "size-button sb#{product.id}", type: "radio", "data-toggle" => "#{ProductSize.find(id).size}", "product-id" => "#{product.id}"}= ProductSize.find(id).size
         %br
         %br
-        = show_price(product.price)
+        = format_price(product.price)
         %br
         =product.description
         %br
