--- a/app/views/purchases/new.html.haml
+++ b/app/views/purchases/new.html.haml
@@ -1,5 +1,58 @@
 .section
   .section__content
     %h1.title Pagamento
-    
-    = render 'form'
+
+    .columns.columns--small
+      .column.column--3
+        .button.button--blue.method{"data-value" => "credit_card", onclick: "setPaymentMethod($(this))"} Cartão
+      .column.column--3
+        .button.button--gray{"data-value" => "billet", onclick: "setPaymentMethod($(this))", disabled: :disabled} Boleto
+      .column.column--3
+        .button.button--gray{"data-value" => "bank_transfer", onclick: "setPaymentMethod($(this))", disabled: :disabled} TED
+    %br
+
+    = simple_form_for(@purchase, url: :proccess_payment, method: :post, html: { name: "pay", id: "pay", class: "fancy-form" }) do |f|
+      = f.input :payment_method, input_html: { value: "credit_card" }, as: :hidden
+      %fieldset
+        %input#description{:name => "description", :type => "text", :value => "Pedido Multinível da moda", disabled: :disabled, style: "display: none"}
+        %input#transaction_amount{:name => "transaction_amount", :value => "#{sum_items(current_user.shopping_cart)}", disabled: :disabled, style: "display: none"}
+        %p
+          %label{:for => "cardNumber"} Número do cartão
+          %input#cardNumber{:autocomplete => "off", "data-checkout" => "cardNumber", :oncopy => "return false", :oncut => "return false", :ondrag => "return false", :ondrop => "return false", :onpaste => "return false", :onselectstart => "return false", :type => "text", "data-mask" => "0000 0000 0000 0000"}/
+        %p
+          %label{:for => "cardholderName"} Nome escrito no cartão
+          %input#cardholderName{"data-checkout" => "cardholderName", :type => "text"}/
+        %p
+          %label{:for => "cardExpirationMonth"} Mês de vencimento
+          %input#cardExpirationMonth{:autocomplete => "off", "data-checkout" => "cardExpirationMonth", :oncopy => "return false", :oncut => "return false", :ondrag => "return false", :ondrop => "return false", :onpaste => "return false", :onselectstart => "return false", :type => "text"}/
+        %p
+          %label{:for => "cardExpirationYear"} Ano de vencimento
+          %input#cardExpirationYear{:autocomplete => "off", "data-checkout" => "cardExpirationYear", :oncopy => "return false", :oncut => "return false", :ondrag => "return false", :ondrop => "return false", :onpaste => "return false", :onselectstart => "return false", :type => "text"}/
+        %p
+          %label{:for => "securityCode"} Código de segurança
+          %input#securityCode{:autocomplete => "off", "data-checkout" => "securityCode", :oncopy => "return false", :oncut => "return false", :ondrag => "return false", :ondrop => "return false", :onpaste => "return false", :onselectstart => "return false", :type => "text"}/
+        %p
+          %label{:for => "installments"} Parcelas
+          %select#installments.form-control{:name => "installments"}
+
+        %select#docType{"data-checkout" => "docType", style: "display: none", value: "#{current_user.social_security_number.present? ? 'CPF' : 'CNPJ'}"}
+        %input#docNumber{"data-checkout" => "docNumber", :type => "text", style: "display: none", value: "#{current_user.social_security_number.present? ? current_user.social_security_number.gsub('.', '').gsub('-', '') : current_user.tax_number.gsub('.', '').gsub('-', '').gsub('/', '')}"}
+
+
+        %input#email{:name => "email", :type => "email", :value => "#{current_user.email}", style: "display: none"}
+
+        %input#payment_method_id{:name => "payment_method_id", :type => "hidden"}
+        %button.button.button--green.button--full-width{:type => "submit", :value => "Pagar"} Finalizar Pagamento
+
+- content_for :head do
+  %meta{:content => "reload", :name => "turbolinks-visit-control"}/
+
+- content_for :javascript do
+  :javascript
+    function setPaymentMethod(element) {
+      var method = element.attr("data-value");
+      $('.method').removeClass('method');
+      element.addClass('method');
+
+      $('#purchase_payment_method').attr("value", method);
+    }
