--- a/app/views/shopping_carts/_list.html.haml
+++ b/app/views/shopping_carts/_list.html.haml
@@ -22,7 +22,7 @@
               = f.simple_fields_for :shopping_cart_items, item do |g|
                 = g.input :quantity, label: false, input_html: { style: "max-width: 10px; border: 0.5px solid grey", "data-toggle" => "#{item.id}", id: "item_#{item.id}", onkeypress: "changeQuantity($(this))", onchange: "changeQuantity($(this))" }
               = f.submit "submit", id: "submit_quantity_#{item.id}", style: "display: none"
-          %td= show_price(item.product.price)
+          %td= format_price(item.product.price)
           %td
             = link_to remove_item_path(:item_id => item.id), data: { confirm: 'Remover item?' }, remote: true, input_html: { id: "remove_#{item.id}" } do
               %img.destroy{src: "https://icongr.am/clarity/trash.svg?color=F20505", style: "max-width: 20px"}
@@ -33,7 +33,7 @@
         %td
           %strong Total:
         %td#total
-          = sum_items(@shopping_cart)
+          = show_price(@shopping_cart)
         %td
 
 %br
