--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -16,21 +16,22 @@
 
         %tbody
           - @users.each do |user|
-            %tr
-              %td
-                = image_tag(user.avatar.url, style: "width: 50px; height: 50px; border-radius: 50%")
-              %td= user.name
-              %td= user.graduation.capitalize if user.graduation.present?
-              %td= translate_role(user.role)
-              %td
-                = link_to user do
-                  %img.destroy{src: "https://icongr.am/clarity/eye.svg?color=13B3F2", style: "max-width: 20px"}
-              %td
-                = link_to edit_user_path(user) do
-                  %img.destroy{src: "https://icongr.am/clarity/pencil.svg?color=ffc406", style: "max-width: 20px"}
-              %td
-                = link_to user, method: :delete, data: { confirm: 'Tem certeza disso? Isso Não poderá ser desfeito!' } do
-                  %img.destroy{src: "https://icongr.am/clarity/trash.svg?color=F20505", style: "max-width: 20px"}
+            - unless User.find_by_id(user.id).deleted_at
+              %tr
+                %td
+                  = image_tag(user.avatar.url, style: "width: 50px; height: 50px; border-radius: 50%")
+                %td= user.name
+                %td= user.graduation.capitalize if user.graduation.present?
+                %td= translate_role(user.role)
+                %td
+                  = link_to user do
+                    %img.destroy{src: "https://icongr.am/clarity/eye.svg?color=13B3F2", style: "max-width: 20px"}
+                %td
+                  = link_to edit_user_path(user) do
+                    %img.destroy{src: "https://icongr.am/clarity/pencil.svg?color=ffc406", style: "max-width: 20px"}
+                %td
+                  = link_to user, method: :delete, data: { confirm: 'Tem certeza disso? Isso Não poderá ser desfeito!' } do
+                    %img.destroy{src: "https://icongr.am/clarity/trash.svg?color=F20505", style: "max-width: 20px"}
 
     %br
 
