added more instructions before the whatsapp button at users profile page

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -22,6 +22,8 @@
           %br
           %small Copie esse código e envie para alguém se cadastrar utilizando ele, ou clique no botão abaixo para compartilhar seu link com alguém
           %br
+          %small Na hora de realizar o cadastro, a pessoa para qual você enviou este código só precisa inseri-lo no último campo do formulário "Código de cadastro"
+          %br
           %br
           %a.button.button--pink{href: "whatsapp://send?text=https://multinivelmodas.baptistsoftware.com.br/link/#{@user.url_minifier.number}", "data-action" => "share/whatsapp/share"} Enviar pelo Whatsapp
 
