implemented TED payment method

--- a/app/assets/stylesheets/theme.scss
+++ b/app/assets/stylesheets/theme.scss
@@ -75,4 +75,13 @@ a {
 
 .method {
   border: 2px solid red;
+  background-color: $blue;
+}
+
+.payment_form {
+  display: none;
+}
+
+.active {
+  display: block;
 }
