added layout link to authorize payments

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -103,6 +103,9 @@
                 %img{src: "https://icongr.am/jam/check.svg"}
                 = link_to "Aprovar Produtos", approve_products_path
               %li
+                %img{src: "https://icongr.am/jam/check.svg"}
+                = link_to "Aprovar Pedidos", unauthorized_payments_path
+              %li
                 %img{src: "https://icongr.am/jam/user.svg"}
                 = link_to "Usuários", users_path
               %li
