--- a/app/views/orders/new.html.haml
+++ b/app/views/orders/new.html.haml
@@ -1,5 +1,7 @@
-%h1 New order
+.section
+  .section__content
+    %h1.title Novo pedido
 
-= render 'form'
+    %h3 Gerar Pedido a partir do XML
 
-= link_to 'Back', orders_path
+    = render 'form'
